# Prabhu-Seeds

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PGA_AgriTask_Implementation_Plan_1.md  PGA_AgriTask_Web_Interface_Plan.docx  alembic.ini  docker-compose.dev.yml  docker-compose.yml  requirements-dev.txt  requirements.txt  setup.bat  start-backend.bat  start-frontend.bat  start.bat  stop.bat
backend/: .dockerignore  pyproject.toml  requirements-dev.txt
backend/alembic/: env.py
backend/alembic/versions/: 002_add_repeat_count.py  003_add_description.py  004_add_task_members.py  005_add_completion_location.py  006_task_extra_fields.py
backend/app/: worker.py
backend/app/api/v1/: analytics.py  attendance.py  auth.py  dashboard.py  dealers.py  districts.py  expenses.py  leaves.py  notifications.py  orders.py  tasks.py  (+3 more)
backend/app/core/: database.py  dependencies.py  redis.py  security.py
backend/app/integrations/: google_maps.py
backend/app/models/: audit_log.py  dealer.py  notification.py  task.py  user.py  user_consent.py
backend/app/schemas/: analytics.py  attendance.py  auth.py  common.py  dealer.py  expense.py  leave.py  maps.py  order.py  task.py  user.py
backend/app/services/: analytics_service.py  attendance_service.py  auth_service.py  dealer_service.py  expense_service.py  leave_service.py  maps_service.py  notification_service.py  task_service.py  visibility.py
backend/scripts/: seed_dev.py
backend/supabase/migrations/: 20240101000000_rls_policies.sql
backend/tests/: test_attendance.py  test_tasks.py  test_visibility.py
(+137 files in other folders)
